Fix email address in contact form and header

--- a/web_cna_solutions (2.html
+++ b/web_cna_solutions (2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -105,10 +105,10 @@
   <p><strong>Dirección:</strong> Calle 44 No. 41-84 Oficina 308</p>
   <p><strong>Ciudad:</strong> Barranquilla – Colombia</p>
   <p><strong>Teléfonos:</strong> 301 984 9458 – 322 534 5371</p>
-  <p><strong>Correo:</strong> Avalúosmanga@gmail.com</p>
+  <p><strong>Correo:</strong> Avaluosmanga@gmail.com</p>
 
   <h3>Formulario de Contacto</h3>
-  <form action="mailto:Avalúosmanga@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:Avaluosmanga@gmail.com" method="post" enctype="text/plain">
     <input type="text" name="nombre" placeholder="Nombre" required style="width:100%; padding:10px; margin:5px 0;"><br>
     <input type="email" name="email" placeholder="Correo electrónico" required style="width:100%; padding:10px; margin:5px 0;"><br>
     <textarea name="mensaje" placeholder="Mensaje" required style="width:100%; padding:10px; margin:5px 0;"></textarea><br>
